android-inputsource: add factory settings dialog [3/3]
PD#SWPL-47802

Problem:
Need implement restore to default funcitons, includes:
1.reset all channels
2.export channels to file
3.import channels from file
4.reset satellites from file
5.export satellites to file
6.restore country and other settings

Solution:
add factory settings dialog, and add implements
in paramentermanager.
Entrance:
setprop vendor.tv.dtvkit.debugmenu true
then enter dtvkit_scan->options->FactorySettings

Verify:
ohm,redi

Change-Id: Ia8dc487c7105407153ea21901f0c2e8afdc8153e
Signed-off-by: kai.qin <kai.qin@amlogic.com>

--- a/app/src/main/droidlogic/res/layout/lanuage_settings.xml
+++ b/app/src/main/droidlogic/res/layout/lanuage_settings.xml
@@ -322,5 +322,30 @@
                 android:textAllCaps="false"
                 android:text="@string/strSettingsAutoSearchingSetting" />
         </LinearLayout>
+        <LinearLayout
+            android:id="@+id/factory_settings"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:orientation="horizontal"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:visibility="gone"
+            android:gravity="center_vertical">
+
+            <TextView
+                android:id="@+id/factory_settings_text"
+                android:layout_width="@dimen/dvb_language_text_width"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:text="@string/strFactorySettings" />
+
+            <Button
+                android:id="@+id/factory_settings_button"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:gravity="center_vertical"
+                android:textAllCaps="false"
+                android:text="@string/strSettingsAutoSearchingSetting" />
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
