--- a/app/src/main/droidlogic/res/values/dimens.xml
+++ b/app/src/main/droidlogic/res/values/dimens.xml
@@ -18,4 +18,10 @@
     <dimen name="automatic_searching_item_width">125dp</dimen>
     <dimen name="automatic_searching_hour_text">10sp</dimen>
 
+    <dimen name="factory_settings_margin_size">50dp</dimen>
+    <dimen name="factory_settings_container_margin_size">20dp</dimen>
+    <dimen name="factory_settings_item_width">200dp</dimen>
+    <dimen name="factory_sub_settings_item_width">150dp</dimen>
+    <dimen name="factory_settings_item_height">40dp</dimen>
+
 </resources>
