--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -111,6 +111,13 @@
         <item>AUTO</item>
     </string-array>
 
+    <string-array name="dvbc_scantype_entries">
+        <item>Network</item>
+        <item>Quick</item>
+        <item>Full</item>
+        <item>Blind</item>
+    </string-array>
+
     <string-array name="public_search_mode_entries">
         <item>Manual</item>
         <item>Auto</item>
