android-inputsource: dvbs add channelType and Service Type filter [1/1]
PD#SWPL-48567

Problem:
dvbs add channelType and Service Type filter

Solution:
dvbs add channelType and Service Type filter

Verify:
redi

Change-Id: I71eddcbb1861e3f64bffdf1b869addeedc408172
Signed-off-by: kai.qin <kai.qin@amlogic.com>

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -127,4 +127,16 @@
         <item>Channel Frequency</item>
         <item>Channel Number</item>
     </string-array>
+
+    <string-array name="dvbs_channel_type">
+        <item>All</item>
+        <item>Free</item>
+        <item>Scramble</item>
+    </string-array>
+
+    <string-array name="dvbs_service_type">
+        <item>All</item>
+        <item>DTV</item>
+        <item>Radio</item>
+    </string-array>
 </resources>
