--- a/app/src/main/res/layout/satsetup.xml
+++ b/app/src/main/res/layout/satsetup.xml
@@ -186,7 +186,42 @@
             android:layout_marginLeft="15dp"
             android:entries="@array/modulation_mode_entries"/>
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="left|center_vertical"
+        android:orientation="horizontal" >
 
+        <TextView
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:text="@string/strChannelType" />
+
+        <Spinner
+            android:id="@+id/channel_type"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:entries="@array/dvbs_channel_type"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="left|center_vertical"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:text="@string/strServiceType" />
+
+        <Spinner
+            android:id="@+id/service_type"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:entries="@array/dvbs_service_type"/>
+    </LinearLayout>
     <!--<Spinner
         android:id="@+id/fec"
         android:layout_width="match_parent"
