android-inputsource: add pin dialog support [1/1]
PD#SWPL-37090

Problem:
8669-570
No step/menu item which is asking user
to set pin code after factory reset

Solution:
add pin dialog support

Verify:
redi

Change-Id: Ib0505674dba9c4914312a0d32d0d2b603be64be6
Signed-off-by: kai.qin <kai.qin@amlogic.com>
Signed-off-by: Zhiwei Yan <zhiwei.yan@amlogic.com>

--- a/app/src/main/droidlogic/res/values/colors.xml
+++ b/app/src/main/droidlogic/res/values/colors.xml
@@ -20,4 +20,10 @@
      <color name="color_text_item">#FF65686F</color>
      <color name="color_text_prompt">#FF808080</color>
      <color name="transparent">#00000000</color>
+
+    <!-- pin dialiog -->
+    <color name="pin_dialog_text_color">#C0EEEEEE</color>
+    <color name="pin_dialog_background">#24252B</color>
+    <color name="pin_number_picker_focused_background">#007AC3</color>
+    <drawable name="translucent_background">#00000000</drawable>
 </resources>
