--- a/app/src/main/droidlogic/res/values/styles.xml
+++ b/app/src/main/droidlogic/res/values/styles.xml
@@ -17,4 +17,15 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
+    <style name="dialog_sen5_01" parent="@android:style/Theme.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <!-- 无边框 -->
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsFloating">true</item>
+        <!-- 悬浮 -->
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:backgroundDimAmount">0.9</item>
+        <!-- 无遮盖 -->
+        <item name="android:windowBackground">@drawable/translucent_background</item>
+    </style>
 </resources>
