--- a/app/src/main/res/layout/select_search_activity.xml
+++ b/app/src/main/res/layout/select_search_activity.xml
@@ -40,6 +40,7 @@
             android:layout_margin="10dp"
             android:layout_weight="1"
             android:background="@drawable/selector"
+            android:visibility="gone"
             android:text="@string/strDvbc" />
 
         <Button
@@ -49,6 +50,7 @@
             android:layout_margin="10dp"
             android:layout_weight="1"
             android:background="@drawable/selector"
+            android:visibility="gone"
             android:text="@string/strDvbt" />
 
         <Button
@@ -58,6 +60,7 @@
             android:layout_margin="10dp"
             android:layout_weight="1"
             android:background="@drawable/selector"
+            android:visibility="gone"
             android:text="@string/strDvbs" />
 
         <Button
@@ -67,7 +70,37 @@
             android:layout_margin="10dp"
             android:layout_weight="1"
             android:background="@drawable/selector"
+            android:visibility="gone"
             android:text="@string/strIsdbt" />
+
+        <LinearLayout
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:layout_weight="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:layout_margin="10dp"
+                android:gravity="center_vertical"
+                android:text="@string/dvbt_search_type" />
+
+            <Spinner
+                android:id="@+id/spinner_dvb_system"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="3" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/button_scan_menu"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:background="@drawable/selector"
+            android:text="@string/strScanMenu" />
 
         <Button
             android:id="@+id/select_setting"
