--- a/app/src/main/res/layout/satsetup.xml
+++ b/app/src/main/res/layout/satsetup.xml
@@ -295,4 +295,12 @@
             android:layout_weight="1"
             android:text="@string/strStopSearch" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:textSize="16sp" />
 </LinearLayout>
