DTVKit: SSI&SQI UI design and decimal support [1/1]
PD#SWPL-58311
PD#SWPL-58706

Problem:
1.need strength&quality UI in channel scan progress page.
2.ISDB-T when scan channel in Manual way, the UI can't
support decimal input.

Solution:
1. add the ui in DVB-S/T/C/ISDB-T channel scan progress
page to show the strength status and quality status.
2. when edit the channel frequency, add ".143" automatically
after the first character entered.

Verify:
verified by R + redi.

Change-Id: I8f67a4125f41dbdbceb831ce7d6e6530d30f183b
Signed-off-by: min.yang <min.yang@amlogic.com>

--- a/app/src/main/res/layout/autosetup.xml
+++ b/app/src/main/res/layout/autosetup.xml
@@ -372,6 +372,19 @@
             android:layout_marginTop="10dp"
             android:text="@string/strSearchDvbcDescription"
             android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/strengthstatus"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/qualitystatus"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="16sp" />
+
     </LinearLayout>
 
 </LinearLayout>
