--- a/app/src/main/res/layout/satsetup.xml
+++ b/app/src/main/res/layout/satsetup.xml
@@ -303,4 +303,16 @@
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
         android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/strengthstatus"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/qualitystatus"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="16sp" />
 </LinearLayout>
