dtvkit-TIS: rename package name [1/2]
PD#SWPL-59278

Problem:
need use com.droidlogic.dtvkit PCK name

Solution:
org.dtvkit to com.droidlogic.dtvkit

Verify:
redi

Change-Id: I69cf56ab2d7a2ae4c3cb2aeb777f5e32a84211c2
Signed-off-by: kieth liu <kieth.liu@amlogic.com>

--- a/app/src/main/res/layout/cimenu.xml
+++ b/app/src/main/res/layout/cimenu.xml
@@ -25,7 +25,7 @@
             android:background="#06516e"
             android:textSize="24sp" />
 
-        <org.dtvkit.inputsource.MaxHeightScrollView
+        <com.droidlogic.dtvkit.inputsource.MaxHeightScrollView
             android:id="@+id/scrollContainer"
             android:layout_width="600dp"
             android:layout_height="wrap_content"
@@ -37,7 +37,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
             </LinearLayout>
-        </org.dtvkit.inputsource.MaxHeightScrollView>
+        </com.droidlogic.dtvkit.inputsource.MaxHeightScrollView>
 
         <TextView
             android:id="@+id/textViewMenuFooter"
