--- a/app/src/main/res/xml/dtvkittvinput.xml
+++ b/app/src/main/res/xml/dtvkittvinput.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <tv-input xmlns:android="http://schemas.android.com/apk/res/android"
     android:canRecord="true"
-    android:setupActivity="org.dtvkit.inputsource.DtvkitDvbScanSelect"
+    android:setupActivity="com.droidlogic.dtvkit.inputsource.DtvkitDvbScanSelect"
     android:tunerCount="1" />
