--- a/app/src/main/res/layout/autosetup.xml
+++ b/app/src/main/res/layout/autosetup.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
+    android:keepScreenOn="true"
     android:orientation="horizontal">
     <!-- android:background="#ff5000"  -->
     <!--<LinearLayout
