--- a/app/src/main/res/layout/cabsetup.xml
+++ b/app/src/main/res/layout/cabsetup.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="50dp"
+    android:keepScreenOn="true"
     android:orientation="vertical">
 
     <ImageView
